--- a/src/osgEarth/CMakeLists.txt
+++ b/src/osgEarth/CMakeLists.txt
@@ -216,6 +216,7 @@ SET(LIB_PUBLIC_HEADERS
     ShaderLoader
     ShaderMerger
     ShaderUtils
+    SelectExtentTool
     SimplexNoise
     SpatialReference
     StateSetCache
@@ -581,6 +582,7 @@ set(TARGET_SRC
     ShaderLoader.cpp
     ShaderMerger.cpp
     ShaderUtils.cpp
+    SelectExtentTool.cpp
     SimplexNoise.cpp
     SpatialReference.cpp
     StateSetCache.cpp
