Update to build with 3.1 update

--- a/src/osgEarthAerodromes/CMakeLists.txt
+++ b/src/osgEarthAerodromes/CMakeLists.txt
@@ -1,8 +1,9 @@
-IF   (DYNAMIC_OSGEARTH)
+
+IF(OSGEARTH_BUILD_SHARED_LIBS)
     ADD_DEFINITIONS(-DOSGEARTHAERODROME_LIBRARY)
-ELSE (DYNAMIC_OSGEARTH)
+ELSE (OSGEARTH_BUILD_SHARED_LIBS)
     ADD_DEFINITIONS(-DOSGEARTHAERODROME_LIBRARY_STATIC)
-ENDIF(DYNAMIC_OSGEARTH)
+ENDIF(OSGEARTH_BUILD_SHARED_LIBS)
 
 set(LIB_NAME osgEarthAerodromes)
 
@@ -46,6 +47,9 @@ ADD_LIBRARY( ${LIB_NAME} SHARED
     ${LIB_PUBLIC_HEADERS}  
     ${LIB_COMMON_FILES}
 )
+
+# Add this project to the NodeKits solution folder
+set_property( TARGET ${LIB_NAME} PROPERTY FOLDER "NodeKits" )
 
 
 INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR} ${OSGEARTH_SOURCE_DIR} ${GDAL_INCLUDE_DIR})
