--- a/src/osgEarthBuildings/CMakeLists.txt
+++ b/src/osgEarthBuildings/CMakeLists.txt
@@ -1,8 +1,9 @@
-IF   (DYNAMIC_OSGEARTH)
+
+IF(OSGEARTH_BUILD_SHARED_LIBS)
     ADD_DEFINITIONS(-DOSGEARTHBUILDINGS_LIBRARY)
-ELSE (DYNAMIC_OSGEARTH)
+ELSE ()
     ADD_DEFINITIONS(-DOSGEARTHBUILDINGS_LIBRARY_STATIC)
-ENDIF(DYNAMIC_OSGEARTH)
+ENDIF()
 
 set(LIB_NAME osgEarthBuildings)
 
@@ -67,11 +68,13 @@ set(LIB_COMMON_FILES
     ElevationsLodNode.cpp
 )
 
-
 ADD_LIBRARY( ${LIB_NAME} SHARED
     ${LIB_PUBLIC_HEADERS}  
     ${LIB_COMMON_FILES}
 )
+
+# Add this project to the NodeKits solution folder
+set_property( TARGET ${LIB_NAME} PROPERTY FOLDER "NodeKits" )
 
 
 INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR} ${OSGEARTH_SOURCE_DIR} ${GDAL_INCLUDE_DIR})
