Disable building of the SL/Triton nodekits that are unused by moe

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,7 @@ FOREACH( lib
          osgEarthSplat
          osgEarthAerodromes
          osgEarthBuildings
-         osgEarthDrivers
-         osgEarthSilverLining
-         osgEarthTriton)
+         osgEarthDrivers)
     add_subdirectory( ${lib} )
 ENDFOREACH( lib )
 
