--- a/src/osgEarthDrivers/CMakeLists.txt
+++ b/src/osgEarthDrivers/CMakeLists.txt
@@ -40,7 +40,7 @@ add_subdirectory(mapinspector)
 add_subdirectory(monitor)
 add_subdirectory(script_engine_duktape)
 add_subdirectory(sky_gl)
-add_subdirectory(sky_silverlining)
+#add_subdirectory(sky_silverlining)
 add_subdirectory(sky_simple)
 add_subdirectory(template)
 add_subdirectory(terrainshader)
