Update osgEarth detection code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -211,6 +211,10 @@ IF (NOT OPENSCENEGRAPH_VERSION)
 	SET(OPENSCENEGRAPH_VERSION ${OPENSCENEGRAPH_MAJOR_VERSION}.${OPENSCENEGRAPH_MINOR_VERSION}.${OPENSCENEGRAPH_PATCH_VERSION})
 ENDIF(NOT OPENSCENEGRAPH_VERSION)
 
+if(OPENSCENEGRAPH_VERSION)
+    message(STATUS "Found OSG version ${OPENSCENEGRAPH_VERSION}")
+endif()
+
 # Make the headers visible to everything
 INCLUDE_DIRECTORIES(
     ${OSGEARTH_SOURCE_DIR}/src
