Squashed commit of the following:
commit 82f5c3356e39ccd1d4650400818b2acdbb4471f2
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 13:24:07 2021 -0500

    Reinstate GeoImage::takeImage method

commit ae87e6c7050d8df69e95cab70db6bc43c3b06722
Merge: ae054ae33 e9efda053
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 12:05:53 2021 -0500

    Merge upstream master

commit e9efda053917c662b04a68219204f62df3467fe1
Merge: 133eabfbf 76204f526
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 10:39:01 2021 -0500

    Merge branch 'master' of github.com:gwaldron/osgearth

commit 133eabfbf7bb235efa5c48ce9dec982056b18ebb
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 10:38:56 2021 -0500

    CascadeDraping: fix a problem with using CDD with picking; the max anisotopy on the pick camera was set to 4.0 which caused incorrect object ID values around the edges of a fragment

commit 76204f52687d351fe139659e816d15c3b7d99533
Author: Jason Beverage <jasonbeverage@gmail.com>
Date:   Tue Jan 19 10:36:08 2021 -0500

    fix build when implicit ref_ptr conversion is off

commit 620f1a6951d97ac5aacd3a6d8d6cc8c97fc819e4
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 10:15:24 2021 -0500

    CascadeDraping: revert code that caused only the first cascade to appear

commit 2ae7a32bb017a2fb9a36cf4f8bb8a2a0422059c3
Merge: c3d3b4fc3 7e59c246d
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 08:53:29 2021 -0500

    Merge branch 'master' of github.com:gwaldron/osgearth

commit c3d3b4fc3cef6229f32ff13871305e70e1639662
Author: Glenn Waldron <gwaldron@gmail.com>
Date:   Tue Jan 19 08:53:26 2021 -0500

    Threading: replace old ThreadPool with new JobArena API in TDTIles, GeoCoder, ElevationPool, FileSystemCache, TileNode, and various utilities

commit 7e59c246db66300573fa7828da6a29ea646bceab
Author: Jason Beverage <jasonbeverage@gmail.com>
Date:   Fri Jan 15 15:23:44 2021 -0500

    Added the ability to set the the Geo

--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -11,6 +11,17 @@ set(DOCS_ROOT
     source/layers.md
     source/releasenotes.md
     source/support.md
+    
+    source/layers/Layer.md
+    source/layers/TileLayer.md
+    source/layers/VisibleLayer.md
+    source/layers/ImageLayer.md
+    
+    source/layers/ArcGISServerImageLayer.md
+    source/layers/ArcGISTilePackageImageLayer.md
+    source/layers/BingImageLayer.md
+    source/layers/ContourMapLayer.md
+    source/layers/GDALImageLayer.md
 )
 
 # todo if we need folders later
